--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -9,6 +9,7 @@
 .intro {
     max-width: 540px;
     text-align: center;
+    z-index: 1;
 }
 
 .home__img {
@@ -27,13 +28,13 @@
     margin: 1.5rem 0;
 }
 
-.home__socials-link {
+.home__social-link {
     color: var(--title-color);
     font-size: 1.3rem;
     transition: .3s;
 }
 
-.home__socials-link:hover {
+.home__social-link:hover {
     color: hsl(43, 100%, 68%);
 }
 
