make responnsive for about, sidebar sections

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -34,19 +34,15 @@
 /*skills grid's styles included here*/
 
 .about__boxes {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 1rem;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1.875rem;
     margin-top: 4.25rem;
-    margin-left: 25rem;
-    
-    
+    justify-content: center;
 }
 
-.about__box {
+.about__boxes {
     display: flex;
-    column-gap: 1rem;
-    
-    
+    column-gap: 1.5rem;    
 }
 
 .about__icon {
@@ -57,3 +53,53 @@
 .about__title {
     font-size: 1.875rem;
 }
+
+@media screen and (max-width: 1024px) {
+    .about__container {
+      grid-template-columns: 720px;
+      justify-content: center;
+      row-gap: 1.875rem;
+    }
+
+    .about__data::before {
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-bottom: 10px solid #fff;
+        left: 49%;
+        top: -20px;
+        
+    }
+
+    .about__img {
+        justify-self: center;
+    }
+
+    .about__boxes {
+        flex-direction: column;
+        row-gap: .5rem;
+        text-align: center;
+
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .about__container {
+        grid-template-columns: 350px;
+    }
+
+    .about__data::before {
+        left: 47%;
+    }
+
+    .about__data {
+        grid-template-columns: 1fr;
+        row-gap: 1.875rem;
+    }
+
+    .about__boxes {
+        grid-template-columns: repeat(2, 150px);
+        row-gap: 1.5rem;
+        justify-content: center;
+    }
+
+  }
