--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -26,6 +26,8 @@
     display: flex;
     column-gap: 1.75rem;
     margin: 1.5rem 0;
+    align-items: center;
+    justify-content: center;
 }
 
 .home__social-link {
@@ -158,3 +160,9 @@
     bottom: 10%;
     right: 2%;
 }
+
+@media screen and (max-width: 1024px) {
+    .home__social-link {
+      font-size: 1.125rem;
+    }
+  }
