make some responsiveness

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -68,3 +68,9 @@
     }
   }
 
+  @media screen and (max-width: 350px) {
+    .services__container {
+      grid-template-columns: 1fr;
+    }
+  }
+
