--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -103,3 +103,19 @@
     }
 
   }
+
+  @media screen and (max-width: 576px) {
+    .about__container {
+        grid-template-columns: 320px;
+    }
+  }
+
+  @media screen and (max-width: 350px) {
+    .about__container {
+        grid-template-columns: 1fr;
+    }
+
+    .about__boxes {
+        grid-template-columns: 1fr;
+    }
+  }
