--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,7 +10,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 10;
+    z-index: 1;
+    transition: .3s;
 }
 
 .nav__list {
@@ -50,7 +51,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 10;
+    transition: .3s;
 }
 
 @media screen and (max-width: 1024px) {
