--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -1,6 +1,7 @@
 .blog__container {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1.875rem;
+    row-gap: 1.875rem;
 }
 
 .blog__card {
