--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -67,6 +67,19 @@
     transform: translateY(30px);
     transition: .3s;
     opacity: 0;
+    align-items: center;
+    text-align: center;
+}
+
+.work__subtitle {
+    font-size: var(--small-font-size);
+    color: #fff; /* Light gray color for subtitle */
+    display: block;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    margin-top: 0.25rem;
+    align-items: center;
+    text-align: center;
 }
 
 .work__button {
@@ -97,3 +110,27 @@
     opacity: 1;
     transform: translateY(0);
 }
+
+
+@media screen and (max-width: 1024px) {
+    .work__filters {
+        justify-content: center;
+      }
+
+    .work__container {
+      grid-template-columns: repeat(2, 330px);
+      justify-content: center;
+      row-gap: 1.875rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .work__container {
+      grid-template-columns: 310px;
+    }
+
+    .work__filters {
+        row-gap: .25rem;
+      }
+  }
+
