--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 10;
     transition: .3s;
 }
 
@@ -53,6 +53,15 @@
     align-items: center;
     z-index: 10;
     transition: .3s;
+}
+
+@media screen and (min-width: 1024px) {
+    .nav__toggle {
+        display: none;
+    }
+    .aside {
+        left: 0;
+    }
 }
 
 @media screen and (max-width: 1024px) {
