--- a/src/index.css
+++ b/src/index.css
@@ -168,8 +168,9 @@ img {
     position: fixed;
     top: 2rem;
     right: 2rem;
-    padding: 8px 16px;
+    padding: 12px 12px;
     border: none;
+    z-index: 5;
     border-radius: 100%; /* Makes the button round like an icon */
     background-color: var(--container-color);
     color: black; /* Sets the icon color to black */
